<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:backgroundTint="#D34545"
    android:fitsSystemWindows="true"
    tools:context=".SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#DD5151"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="56dp"
        android:paddingRight="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:background="#00AE3232"
            android:backgroundTint="#007E1414"
            android:fontFamily="@font/kavoon"
            android:text="SIGN UP"
            android:textColor="#000000"
            android:textSize="24sp" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:boxBackgroundColor="#00FFFFFF"
            app:boxStrokeColor="#000000"
            app:endIconTint="#000000"
            app:hintTextColor="#000000"
            app:passwordToggleTint="#00FFFFFF"
            app:startIconDrawable="@drawable/ic_baseline_person_24"
            app:startIconTint="#FF9800">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Name"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:boxBackgroundColor="#00FFFFFF"
            app:boxStrokeColor="#000000"
            app:endIconTint="#000000"
            app:hintTextColor="#000000"
            app:passwordToggleTint="#00FFFFFF"
            app:startIconDrawable="@drawable/ic_baseline_person_24"
            app:startIconTint="#FF9800">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Username"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:boxBackgroundColor="#00FFFFFF"
            app:boxStrokeColor="#000000"
            app:endIconTint="#000000"
            app:hintTextColor="#000000"
            app:startIconDrawable="@drawable/ic_baseline_smartphone_24"
            app:startIconTint="#FF9800">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Mobile Number"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:boxBackgroundColor="#00FFFFFF"
            app:boxStrokeColor="#000000"
            app:endIconTint="#000000"
            app:hintTextColor="#FF9800"
            app:startIconDrawable="@drawable/ic_baseline_email_24"
            app:startIconTint="#FF9800">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_emailR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:boxBackgroundColor="#00FFFFFF"
            app:boxStrokeColor="#000000"
            app:endIconTint="#000000"
            app:hintTextColor="#000000"
            app:startIconDrawable="@drawable/ic_baseline_enhanced_encryption_24"
            app:startIconTint="#FF9800">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_passwordR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="Create Account"
            app:backgroundTint="#000000" />

        <TextView
            android:id="@+id/link_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="Already a member? Login"
            android:textSize="16dip" />

        <TextView
            android:id="@+id/enkrip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:background="#00AE3232"
            android:backgroundTint="#007E1414"
            android:fontFamily="@font/kavoon"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

    </LinearLayout>
</ScrollView>