...
            android:background="#9C5C5C"
            android:padding="12dp"
            android:text="Login"
            app:backgroundTint="#000000" />

        <TextView
            android:id="@+id/link_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="No account yet? Create one"
            android:textSize="16dip" />

    </LinearLayout>
</ScrollView>
